--- a/spellCheck/Makefile.txt
+++ b/spellCheck/Makefile.txt
@@ -1,14 +1,14 @@
-spell.exe: spellcheck.o hash.o
-	g++ -o spell.exe spellcheck.o hash.o
+spell.exe: main.o hash.o
+	g++ -o spell.exe main.o hash.o
 
-spellcheck.o: spellcheck.cpp hash.h
-	g++ -c spellcheck.cpp
+spellcheck.o: main.cpp hash.h
+	g++ -c main.cpp
 
 hash.o: hash.cpp hash.h
 	g++ -c hash.cpp
 
 debug:
-	g++ -g -o spellDebug.exe spellcheck.cpp hash.cpp
+	g++ -g -o spellDebug.exe main.cpp hash.cpp
 
 clean:
 	rm -f *.exe *.o *.stackdump *~
